Fix overflowing code and prevent users from editing others' comments

--- a/annotate/static/annotate/css/project.css
+++ b/annotate/static/annotate/css/project.css
@@ -24,7 +24,6 @@ td.code-line {
 code {
     font-size: 16px;
     line-height: 1.5;
-    width: 100%;
 }
 
 .comment-row td:nth-child(2) {
@@ -59,4 +58,8 @@ table {
     background-color: whitesmoke;
     width: 100%;
     padding: 5px;
+}
+
+pre {
+  white-space: pre-wrap;
 }
